# CiosTime

./: CMakeLists.txt  CiosTime.bat  CiosTime.pro  README.md  install.bat  libstardate.pc.in
Html/: index.html
Python/: StarDate.i  StarDate.py
Qt/: libstardate.pro
docs/: docs.pri  index.html
docs/css/: stardate.css
docs/tw/: Estimator.html  Frequency.html  StarDate.html  StarTime.html  index.html
include/: stardate.hpp
projects/: index.xml  projects.pri
scripts/: install.bat  prepare.py  x64.bat  x86.bat
src/: estimator.cpp  frequency.cpp  hardware.cpp  src.pri  stardate.cpp  startime.cpp
src/Mac/: Mac.pri
src/Windows/: frequency.cpp  hardware.cpp  startime.cpp  usleep.cpp
